@@ -535,6 +535,8 @@ os2/dlfcn.h		Addon for dl_open
 os2/os2.c		Additional code for OS/2
 os2/os2ish.h		Header for OS/2
 os2/perl2cmd.pl		Corrects installed binaries under OS/2
+os2/os2thread.h		pthread-like typedefs
+os2/os2.sym		Additional symbols to export
 patchlevel.h		The current patch level of perl
 perl.c			main()
 perl.h			Global declarations
