@@ -163,3 +163,6 @@ after 5.004_03:
 	changes to errno?)
 	$0 may be edited to longer lengths (at least under OS/2).
 	OS2::REXX->loads looks in the OS/2-ish fashion too.
+
+after 5.004_53:
+	Minimal thread support added.  One needs to manually move pthread.h
